# lemon_shark

./: .gitignore  01-Booting-Risc-V-Kernel-From-Scratch.md  02-Timer-Interrupts-And-Device-Trees.md  03-allocators-and-testing.md  04-filesystem.md  05-fs-operations.md  06-virtual-memory.md  Cargo.toml  Makefile  README.md  build.sh  linker.ld  os-notes.md  processes.txt
.cargo/: config.toml
.zed/: settings.json
allocator/: Cargo.toml
allocator/src/: lib.rs
bitmap/: Cargo.toml
bitmap/.cargo/: config.toml
bitmap/src/: lib.rs
filesystem/: Cargo.toml
filesystem/src/: bitmap.rs  bytereader.rs  dir_entry.rs  filesystem.rs  inode.rs  inode_cache.rs  layout.rs  lib.rs
mkfs/: Cargo.toml
mkfs/src/: main.rs
src/: allocator.rs  allocator2.rs  bitmap.rs  bytereader.rs  device_tree.rs  filesystem.rs  heap.rs  interrupts.rs  klog.rs  lib.rs  log.rs  main.rs  main.rs.bak  main2.rs  page_frame_allocator.rs  page_table.rs  println.rs  ramdisk.rs  sbi.rs  scheduler.rs  shell.rs  timer.rs  trap_handler.rs  virtio.rs  virtio2.rs
tests/: allocator.rs  allocator_bench.rs  device_tree.rs  filesystem.rs
tests/common/: mod.rs
virtual_memory/: Cargo.toml
virtual_memory/src/: lib.rs
