[package]
name = "lemon_shark"
version = "0.1.0"
edition = "2024"

[dependencies]
fdt = { version = "0.1.5", features = ["pretty-printing"] }
spin = "0.10.0"

[[bin]]
name = "lemon_shark"
test = false
bench = false

[lib]
name = "lemon_shark"
path = "src/lib.rs"
test = false


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
stats = []
logging = []
